plugins/kotlin/idea/tests/testData/multiplatform/extensionOnExpect/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has expects in common module'")!>E<!> {
    actual fun <!LINE_MARKER("descr='Has expects in common module'")!>commonMember<!>() {}

    fun platformMember() {}
}
